# BME-Cpp2

./: .gitignore  README.md
EX01/: CMakeLists.txt  ex1.cpp  ex1.h  ex2.cpp  ex2.h  ex3.cpp  main.cpp
EX02/: CMakeLists.txt  billionaire.cpp  billionaire.h  ex2.cpp  ex2.h  ex3.cpp  ex3.h  main.cpp
EX03/: CMakeLists.txt
EX03/src/: main.cpp
EX03/src/ui/: widget.cpp  widget.h  widget.ui
EX04/: CMakeLists.txt  ex4.cpp  ex4.h  main.cpp  threadLogFile.h  threadLogFileSafe.h
EX05/: CMakeLists.txt  dataqueue.h  main.cpp
SudokuSolverQt/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  OCR.cpp  OCR.h  Sudoku.cpp  Sudoku.h  SudokuSolver.aps  mainwindow.cpp  mainwindow.h  mainwindow.ui
